文章・CSS追加

--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
 <title>test</title>
 <meta charset="utf-8">
+<style>
+body{
+	width: 800px;
+	background-color: #cc6666;
+}
+h1{
+	color: blue;
+	font-size: 32px;
+}
+p{
+	font-size: 18px;
+}
+</style>
 </head>
 <body>
-<p>テスト</p>
+<h1>Github練習</h1>
+<hr>
+<p>テストページ作成中</p>
 </body>
 </html>
